<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/textView_account"
    android:background="@drawable/background_reminder">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editAccountText"
        android:textStyle="bold"
        android:id="@+id/editAccountName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="163dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:background="@drawable/frame_editview"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editAccountUpdateButton"
        android:id="@+id/editAccountUpdateButton"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:background="@drawable/frame_button3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editAccountDeleteButton"
        android:id="@+id/editAccountDeleteButton"
        android:layout_alignTop="@+id/editAccountUpdateButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:background="@drawable/frame_button3"/>
</RelativeLayout>